Complete i18n support: FR/EN/ES with {% trans %} tags in all templates and language selector

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -31,17 +31,26 @@ msgstr "About"
 msgid "Langue"
 msgstr "Language"
 
-msgid "Système de Recherche de Pathologies - Basé sur l'IA et les Embeddings OpenAI"
+msgid ""
+"Système de Recherche de Pathologies - Basé sur l'IA et les Embeddings OpenAI"
 msgstr "Pathology Search System - Based on AI and OpenAI Embeddings"
 
-msgid "Entrez une description clinique ou une question pour identifier les pathologies correspondantes"
-msgstr "Enter a clinical description or question to identify corresponding pathologies"
+msgid ""
+"Entrez une description clinique ou une question pour identifier les "
+"pathologies correspondantes"
+msgstr ""
+"Enter a clinical description or question to identify corresponding "
+"pathologies"
 
 msgid "Description Clinique ou Question"
 msgstr "Clinical Description or Question"
 
-msgid "Exemple: Un enfant sans maladie médicale continue de passer les selles dans des endroits inappropriés malgré avoir été entraîné à la propreté..."
-msgstr "Example: A child without medical illness continues to pass stools in inappropriate places despite being potty trained..."
+msgid ""
+"Exemple: Un enfant sans maladie médicale continue de passer les selles dans "
+"des endroits inappropriés malgré avoir été entraîné à la propreté..."
+msgstr ""
+"Example: A child without medical illness continues to pass stools in "
+"inappropriate places despite being potty trained..."
 
 msgid "Rechercher"
 msgstr "Search"
@@ -67,8 +76,11 @@ msgstr "Results"
 msgid "Correspondance Insuffisante"
 msgstr "Insufficient Match"
 
-msgid "La description fournie ne correspond à aucune pathologie dans notre base de données."
-msgstr "The description provided does not match any pathology in our database."
+msgid ""
+"La description fournie ne correspond à aucune pathologie dans notre base de "
+"données."
+msgstr ""
+"The description provided does not match any pathology in our database."
 
 msgid "Score de correspondance :"
 msgstr "Match score:"
@@ -100,8 +112,12 @@ msgstr "Does not match any known pathology"
 msgid "Conseil :"
 msgstr "Tip:"
 
-msgid "Décrivez les symptômes de manière précise et détaillée (durée, fréquence, intensité, contexte)."
-msgstr "Describe symptoms precisely and in detail (duration, frequency, intensity, context)."
+msgid ""
+"Décrivez les symptômes de manière précise et détaillée (durée, fréquence, "
+"intensité, contexte)."
+msgstr ""
+"Describe symptoms precisely and in detail (duration, frequency, intensity, "
+"context)."
 
 msgid "Réessayer"
 msgstr "Try again"
@@ -196,7 +212,9 @@ msgstr "Complete Pathology Page"
 msgid "Passer au suivant"
 msgstr "Skip to next"
 
-msgid "Remplissez le formulaire ci-dessus et cliquez sur \"VALIDE\" ou \"NON VALIDE\" à la fin"
+msgid ""
+"Remplissez le formulaire ci-dessus et cliquez sur \"VALIDE\" ou \"NON "
+"VALIDE\" à la fin"
 msgstr "Fill out the form above and click \"VALIDATE\" or \"NOT VALIDATE\" at the end"
 
 msgid "Pathologie Validée !"
@@ -208,3 +226,42 @@ msgstr "All results reviewed"
 msgid "Vous avez parcouru tous les résultats disponibles."
 msgstr "You have reviewed all available results."
 
+msgid "Plan de Traitement Médical"
+msgstr "Medical Treatment Plan"
+
+msgid "Haute Confiance"
+msgstr "High Confidence"
+
+msgid "Confiance Modérée"
+msgstr "Moderate Confidence"
+
+msgid "Faible Confiance"
+msgstr "Low Confidence"
+
+msgid "Plan de Traitement Complet"
+msgstr "Complete Treatment Plan"
+
+msgid ""
+"Ce plan inclut : Médicaments recommandés, Dosages précis, Étapes "
+"thérapeutiques, et Conseils pratiques"
+msgstr ""
+"This plan includes: Recommended medications, Precise dosages, Therapeutic "
+"steps, and Practical advice"
+
+msgid "Erreur lors de la génération du plan de traitement"
+msgstr "Error generating treatment plan"
+
+msgid "L'IA n'a pas pu générer le plan de traitement pour cette pathologie."
+msgstr "The AI could not generate the treatment plan for this pathology."
+
+msgid ""
+"Veuillez vérifier que tous les critères ont été correctement remplis et "
+"réessayer."
+msgstr ""
+"Please verify that all criteria have been correctly filled and try again."
+
+msgid "Retour à l'accueil"
+msgstr "Back to Home"
+
+msgid "Imprimer le Plan"
+msgstr "Print Plan"
