--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -31,17 +31,27 @@ msgstr "Acerca de"
 msgid "Langue"
 msgstr "Idioma"
 
-msgid "Système de Recherche de Pathologies - Basé sur l'IA et les Embeddings OpenAI"
-msgstr "Sistema de Búsqueda de Patologías - Basado en IA y Embeddings de OpenAI"
+msgid ""
+"Système de Recherche de Pathologies - Basé sur l'IA et les Embeddings OpenAI"
+msgstr ""
+"Sistema de Búsqueda de Patologías - Basado en IA y Embeddings de OpenAI"
 
-msgid "Entrez une description clinique ou une question pour identifier les pathologies correspondantes"
-msgstr "Ingrese una descripción clínica o pregunta para identificar las patologías correspondientes"
+msgid ""
+"Entrez une description clinique ou une question pour identifier les "
+"pathologies correspondantes"
+msgstr ""
+"Ingrese una descripción clínica o pregunta para identificar las patologías "
+"correspondientes"
 
 msgid "Description Clinique ou Question"
 msgstr "Descripción Clínica o Pregunta"
 
-msgid "Exemple: Un enfant sans maladie médicale continue de passer les selles dans des endroits inappropriés malgré avoir été entraîné à la propreté..."
-msgstr "Ejemplo: Un niño sin enfermedad médica continúa defecando en lugares inapropiados a pesar de haber sido entrenado..."
+msgid ""
+"Exemple: Un enfant sans maladie médicale continue de passer les selles dans "
+"des endroits inappropriés malgré avoir été entraîné à la propreté..."
+msgstr ""
+"Ejemplo: Un niño sin enfermedad médica continúa defecando en lugares "
+"inapropiados a pesar de haber sido entrenado..."
 
 msgid "Rechercher"
 msgstr "Buscar"
@@ -67,8 +77,12 @@ msgstr "Resultados"
 msgid "Correspondance Insuffisante"
 msgstr "Coincidencia Insuficiente"
 
-msgid "La description fournie ne correspond à aucune pathologie dans notre base de données."
-msgstr "La descripción proporcionada no coincide con ninguna patología en nuestra base de datos."
+msgid ""
+"La description fournie ne correspond à aucune pathologie dans notre base de "
+"données."
+msgstr ""
+"La descripción proporcionada no coincide con ninguna patología en nuestra "
+"base de datos."
 
 msgid "Score de correspondance :"
 msgstr "Puntuación de coincidencia:"
@@ -100,8 +114,12 @@ msgstr "No coincide con ninguna patología conocida"
 msgid "Conseil :"
 msgstr "Consejo:"
 
-msgid "Décrivez les symptômes de manière précise et détaillée (durée, fréquence, intensité, contexte)."
-msgstr "Describa los síntomas de manera precisa y detallada (duración, frecuencia, intensidad, contexto)."
+msgid ""
+"Décrivez les symptômes de manière précise et détaillée (durée, fréquence, "
+"intensité, contexte)."
+msgstr ""
+"Describa los síntomas de manera precisa y detallada (duración, frecuencia, "
+"intensidad, contexto)."
 
 msgid "Réessayer"
 msgstr "Reintentar"
@@ -196,8 +214,12 @@ msgstr "Página Completa de la Patología"
 msgid "Passer au suivant"
 msgstr "Pasar al siguiente"
 
-msgid "Remplissez le formulaire ci-dessus et cliquez sur \"VALIDE\" ou \"NON VALIDE\" à la fin"
-msgstr "Complete el formulario arriba y haga clic en \"VÁLIDO\" o \"NO VÁLIDO\" al final"
+msgid ""
+"Remplissez le formulaire ci-dessus et cliquez sur \"VALIDE\" ou \"NON "
+"VALIDE\" à la fin"
+msgstr ""
+"Complete el formulario arriba y haga clic en \"VÁLIDO\" o \"NO VÁLIDO\" al "
+"final"
 
 msgid "Pathologie Validée !"
 msgstr "¡Patología Validada!"
@@ -208,3 +230,43 @@ msgstr "Todos los resultados revisados"
 msgid "Vous avez parcouru tous les résultats disponibles."
 msgstr "Ha revisado todos los resultados disponibles."
 
+msgid "Plan de Traitement Médical"
+msgstr "Plan de Tratamiento Médico"
+
+msgid "Haute Confiance"
+msgstr "Alta Confianza"
+
+msgid "Confiance Modérée"
+msgstr "Confianza Moderada"
+
+msgid "Faible Confiance"
+msgstr "Baja Confianza"
+
+msgid "Plan de Traitement Complet"
+msgstr "Plan de Tratamiento Completo"
+
+msgid ""
+"Ce plan inclut : Médicaments recommandés, Dosages précis, Étapes "
+"thérapeutiques, et Conseils pratiques"
+msgstr ""
+"Este plan incluye: Medicamentos recomendados, Dosis precisas, Pasos "
+"terapéuticos y Consejos prácticos"
+
+msgid "Erreur lors de la génération du plan de traitement"
+msgstr "Error al generar el plan de tratamiento"
+
+msgid "L'IA n'a pas pu générer le plan de traitement pour cette pathologie."
+msgstr "La IA no pudo generar el plan de tratamiento para esta patología."
+
+msgid ""
+"Veuillez vérifier que tous les critères ont été correctement remplis et "
+"réessayer."
+msgstr ""
+"Por favor verifique que todos los criterios han sido completados "
+"correctamente e intente nuevamente."
+
+msgid "Retour à l'accueil"
+msgstr "Volver al Inicio"
+
+msgid "Imprimer le Plan"
+msgstr "Imprimir Plan"
